--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">NAO Communicator</string>
+    <string name="app_name">Nao Yoga Coach App</string>
     <string name="menu_title">Menu</string>
     <string name="menu_open">Open menu</string>
     <string name="menu_close">Close menu</string>
@@ -164,5 +164,7 @@
     <string name="title_activity_naocom_installer">NAOComInstaller</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="btnYoga">btnYoga</string>
+    <string name="btnyoga">Let\'s go yoga !</string>
 
 </resources>
