--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -166,5 +166,6 @@
     <string name="action_settings">Settings</string>
     <string name="btnYoga">btnYoga</string>
     <string name="btnyoga">Let\'s go yoga !</string>
+    <string name="naoimg">naoimg</string>
 
 </resources>
